# de-us-airlines

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mysql_schema.sql  psql_schema.sql  pyproject.toml  requirements.txt  setup.cfg  setup.py
dagster_home/: dagster.yaml
dagster_home/.telemetry/: id.yaml
dbt_airline/: .user.yml  dbt_project.yml  profiles.yml
dbt_airline/analyses/: test.sql
dbt_airline/models/: src__us_airlines.yml  src_airports.sql  src_cancellcode.sql  src_flights.sql  stg_airlines.sql  total_cancelled_by_quarter.sql  total_cancelled_flights_by_quarter.sql  total_cancelled_flights_by_quarter_limit.sql
us_airlines/: __init__.py  project.py
us_airlines/assets/: __init__.py  bronze_layer.py  dbt.py  gold_layer.py  insert_data.py  silver_layer.py
us_airlines/resources/: __init__.py  minio_io_manager.py  mysql_io_manager.py  psql_io_manager.py
